@startuml
class RestAPI {
---
test_view()
teacher_view()
send_image()
send_script()
send_style()
get_summary_attendance()
api_attendance()
get_classlist()
get_calendar()
}

class ExternalConnector {
---
getClasslist(): List[Student]
getCalendar(): Event
}

class ExternalConnectorStub {
---
getClasslist(): List[Student]
getCalendar(): Event
}

class Database {
database_directory: Path
----
__init__(database_directory)
create_attendance(attendance: Attendance)
update_attendance(attendance: Attendance)
get_attendance(id: str): Attendance
get_get_summary_attendance(): List[str]
delete_attendance(id: str) # NOT IMPLEMENTED
}

struct Student {
    firstname: str
    lastname: str
    email: str
    studentNumber: int
}

class Event {
    eID: str
    title: str
    startDate: str
    dueDate: str
    tag: str
}

struct Attendance {
id: str
records: List [StudentAttendanceItem]
}

struct StudentAttendanceItem {
studentID: str
isPresent: bool
}

RestAPI *--- Database
RestAPI *--- ExternalConnector
Database   *---- Attendance
Attendance *---- StudentAttendanceItem
ExternalConnector <--- Event
ExternalConnector <-- Student
ExternalConnector <|-- ExternalConnectorStub
@enduml